LoginButton component added to landing page, and slight CSS fix for spacing problems on landing page

--- a/app/globals.css
+++ b/app/globals.css
@@ -48,6 +48,7 @@ button:disabled {
 }
 
 .container {
+  justify-content: center;
   padding: 40px 0;
   width: 100%;
 }
